--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -19,10 +19,15 @@
       "dom"
     ],
     "resolveJsonModule": true,
-    "esModuleInterop": true  
+    "esModuleInterop": true,
+    "paths": {
+      "@app/*": ["app/*"],
+      "@env/*": ["environments/*"],
+      "@shared/*": ["app/shared/*"]
+    }
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,  
+    "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   },
 }
