--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "ngx-infinite-scroll": "^8.0.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.4.0",
