--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-smart-modal": "^7.3.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "yarn": "^1.21.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
