--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -26,8 +26,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular-ng-autocomplete": "^1.1.15",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-mask": "^8.1.7",
     "ngx-smart-modal": "^7.3.0",
+    "ngx-toastr": "^11.3.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
