--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-smart-modal/ngx-smart-modal.scss",
+              "node_modules/@swimlane/ngx-datatable/index.css",
+              "node_modules/@swimlane/ngx-datatable/themes/material.scss",
+              "node_modules/@swimlane/ngx-datatable/themes/bootstrap.scss",
+              "node_modules/@swimlane/ngx-datatable/assets/icons.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
