--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "angular-ng-autocomplete": "^1.1.15",
+    "bootstrap": "^4.4.1",
     "ngx-infinite-scroll": "^8.0.1",
     "ngx-mask": "^8.1.7",
     "ngx-smart-modal": "^7.3.0",
